--- a/pom.xml
+++ b/pom.xml
@@ -44,8 +44,22 @@
     <dependency>
       <groupId>com.datastax.cassandra</groupId>
       <artifactId>cassandra-driver-core</artifactId>
-      <version>2.1.3</version>
+      <version>2.1.1</version>
     </dependency>
+    
+<dependency>
+	<groupId>org.apache.cassandra</groupId>
+	<artifactId>cassandra-all</artifactId>
+	<version>2.1.2</version>
+</dependency>
+
+<dependency>
+	<groupId>io.teknek</groupId>
+	<artifactId>farsandra</artifactId>
+	<version>0.0.6</version>
+</dependency>
+
+
 
     <!-- testing -->
     <dependency>
@@ -65,5 +79,16 @@
     </dependency>
   </dependencies>
 
-
+	<build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>									
+					<forkCount>1</forkCount>
+					<reuseForks>false</reuseForks>
+					<skipTests>true</skipTests>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
