--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -15,11 +15,23 @@
 ## limitations under the License.
 ## ------------------------------------------------------------------------
 
-# Root logger option
-log4j.rootLogger=INFO, stdout
- 
-# Direct log messages to stdout
-log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-log4j.appender.stdout.Target=System.out
-log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss} %-5p %c{1}:%L - %m%n
+#
+# The logging properties used for testing.
+#
+log4j.rootLogger=INFO, file, out
+
+#log4j.logger.org.apache.camel=DEBUG
+#log4j.logger.org.apache.camel.component.chunk=DEBUG
+
+# CONSOLE appender not used by default
+log4j.appender.out=org.apache.log4j.ConsoleAppender
+log4j.appender.out.layout=org.apache.log4j.PatternLayout
+log4j.appender.out.layout.ConversionPattern=[%30.30t] %-30.30c{1} %-5p %m%n
+#log4j.appender.out.layout.ConversionPattern=%d [%-15.15t] %-5p %-30.30c{1} - %m%n
+
+# File appender
+log4j.appender.file=org.apache.log4j.FileAppender
+log4j.appender.file.layout=org.apache.log4j.PatternLayout
+log4j.appender.file.layout.ConversionPattern=%d [%-15.15t] %-5p %-30.30c{1} - %m%n
+log4j.appender.file.file=target/camel-cassandra-test.log
+log4j.appender.file.append=true
