--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
                 <configuration>									
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
-					<skipTests>true</skipTests>
+					<skipTests>false</skipTests>
                 </configuration>
             </plugin>
         </plugins>
