--- a/src/test/resources/log4j.properties
+++ b/src/test/resources/log4j.properties
@@ -16,18 +16,16 @@
 ## ------------------------------------------------------------------------
 
 #
-# The logging properties used for testing.
+# The logging properties used during tests..
 #
-log4j.rootLogger=INFO, file, out
+log4j.rootLogger=INFO, file
 
-#log4j.logger.org.apache.camel=DEBUG
-#log4j.logger.org.apache.camel.component.chunk=DEBUG
+log4j.logger.org.apache.camel=DEBUG
 
 # CONSOLE appender not used by default
-log4j.appender.out=org.apache.log4j.ConsoleAppender
-log4j.appender.out.layout=org.apache.log4j.PatternLayout
-log4j.appender.out.layout.ConversionPattern=[%30.30t] %-30.30c{1} %-5p %m%n
-#log4j.appender.out.layout.ConversionPattern=%d [%-15.15t] %-5p %-30.30c{1} - %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%d [%-15.15t] %-5p %-30.30c{1} - %m%n
 
 # File appender
 log4j.appender.file=org.apache.log4j.FileAppender
