--- a/pom.xml
+++ b/pom.xml
@@ -46,18 +46,12 @@
       <artifactId>cassandra-driver-core</artifactId>
       <version>2.1.1</version>
     </dependency>
-    
-<dependency>
-	<groupId>org.apache.cassandra</groupId>
-	<artifactId>cassandra-all</artifactId>
-	<version>2.1.2</version>
-</dependency>
 
-<dependency>
-	<groupId>io.teknek</groupId>
-	<artifactId>farsandra</artifactId>
-	<version>0.0.6</version>
-</dependency>
+	<dependency>
+		<groupId>io.teknek</groupId>
+		<artifactId>farsandra</artifactId>
+		<version>0.0.6</version>
+	</dependency>
 
 
 
@@ -89,6 +83,17 @@
 					<skipTests>false</skipTests>
                 </configuration>
             </plugin>
+<!-- 			<plugin>  -->
+<!-- 				<groupId>org.apache.felix</groupId>  -->
+<!-- 				<artifactId>maven-bundle-plugin</artifactId>  -->
+<!-- 				<extensions>true</extensions>  -->
+<!-- 				<configuration>  -->
+<!-- 					<instructions>  -->
+<!-- 						<Bundle-SymbolicName>camel-cassandra</Bundle-SymbolicName>  -->
+<!-- 						<Import-Package>*</Import-Package>  -->
+<!-- 					</instructions>  -->
+<!-- 				</configuration>  -->
+<!-- 			</plugin>  -->
         </plugins>
     </build>
 </project>
