--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,12 @@
     <camel.osgi.export.pkg>org.apache.camel.component.cassandra.*</camel.osgi.export.pkg>
     <camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=cassandra</camel.osgi.export.service>
   </properties>
+  
+  	<scm>
+		<url>https://github.com/oscerd/camel-cassandra</url>
+		<connection>scm:git:https://github.com/oscerd/camel-cassandra.git</connection>
+		<developerConnection>scm:git:https://oscerd@github.com/oscerd/camel-cassandra.git</developerConnection>
+	</scm>
 
   <dependencies>
 
