--- a/pom.xml
+++ b/pom.xml
@@ -1,105 +1,118 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-  Licensed to the Apache Software Foundation (ASF) under one or more
-  contributor license agreements.  See the NOTICE file distributed with
-  this work for additional information regarding copyright ownership.
-  The ASF licenses this file to You under the Apache License, Version 2.0
-  (the "License"); you may not use this file except in compliance with
-  the License.  You may obtain a copy of the License at
+<!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor 
+	license agreements. See the NOTICE file distributed with this work for additional 
+	information regarding copyright ownership. The ASF licenses this file to 
+	You under the Apache License, Version 2.0 (the "License"); you may not use 
+	this file except in compliance with the License. You may obtain a copy of 
+	the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+	by applicable law or agreed to in writing, software distributed under the 
+	License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+	OF ANY KIND, either express or implied. See the License for the specific 
+	language governing permissions and limitations under the License. -->
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  http://www.apache.org/licenses/LICENSE-2.0
+	<artifactId>camel-cassandra</artifactId>
+	<packaging>bundle</packaging>
+	<name>Camel :: Cassandra</name>
+	<description>Camel Cassandra support</description>
+	<groupId>org.apache.camel</groupId>
+	<version>0.0.1</version>
 
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	<properties>
+		<camel.osgi.export.pkg>org.apache.camel.component.cassandra.*</camel.osgi.export.pkg>
+		<camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=cassandra</camel.osgi.export.service>
+		<camel.core.version>2.14.1</camel.core.version>
+		<camel.test.version>2.14.1</camel.test.version>
+		<camel.test.spring.version>2.14.1</camel.test.spring.version>
+		<slf4j.version>1.7.9</slf4j.version>
+		<cassandra.datastax.driver.core>2.1.1</cassandra.datastax.driver.core>
+		<io.teknek.farsandra.version>0.0.6</io.teknek.farsandra.version>
+		<maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
+		<maven.bundle.plugin.version>2.5.3</maven.bundle.plugin.version>
+		<maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
+	</properties>
 
-  <parent>
-    <artifactId>components</artifactId>
-    <groupId>org.apache.camel</groupId>
-    <version>2.15-SNAPSHOT</version>
-  </parent>
-
-  <artifactId>camel-cassandra</artifactId>
-  <packaging>bundle</packaging>
-  <name>Camel :: Cassandra</name>
-  <description>Camel Cassandra support</description>
-
-  <properties>
-    <camel.osgi.export.pkg>org.apache.camel.component.cassandra.*</camel.osgi.export.pkg>
-    <camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=cassandra</camel.osgi.export.service>
-  </properties>
-  
-  	<scm>
+	<scm>
 		<url>https://github.com/oscerd/camel-cassandra</url>
 		<connection>scm:git:https://github.com/oscerd/camel-cassandra.git</connection>
 		<developerConnection>scm:git:https://oscerd@github.com/oscerd/camel-cassandra.git</developerConnection>
 	</scm>
 
-  <dependencies>
+	<dependencies>
 
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-core</artifactId>
-    </dependency>
-    
-    <dependency>
-      <groupId>com.datastax.cassandra</groupId>
-      <artifactId>cassandra-driver-core</artifactId>
-      <version>2.1.1</version>
-    </dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-core</artifactId>
+			<version>${camel.core.version}</version>
+		</dependency>
 
-	<dependency>
-		<groupId>io.teknek</groupId>
-		<artifactId>farsandra</artifactId>
-		<version>0.0.6</version>
-	</dependency>
+		<dependency>
+			<groupId>com.datastax.cassandra</groupId>
+			<artifactId>cassandra-driver-core</artifactId>
+			<version>${cassandra.datastax.driver.core}</version>
+		</dependency>
 
+		<dependency>
+			<groupId>io.teknek</groupId>
+			<artifactId>farsandra</artifactId>
+			<version>${io.teknek.farsandra.version}</version>
+		</dependency>
 
-
-    <!-- testing -->
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.camel</groupId>
-      <artifactId>camel-test-spring</artifactId>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+		<!-- testing -->
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-test</artifactId>
+			<version>${camel.test.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-test-spring</artifactId>
+			<version>${camel.test.spring.version}</version>
+			<scope>test</scope>
+		</dependency>
+	</dependencies>
 
 	<build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>									
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>${maven.surefire.plugin.version}</version>
+				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
 					<skipTests>false</skipTests>
-                </configuration>
-            </plugin>
-<!-- 			<plugin>  -->
-<!-- 				<groupId>org.apache.felix</groupId>  -->
-<!-- 				<artifactId>maven-bundle-plugin</artifactId>  -->
-<!-- 				<extensions>true</extensions>  -->
-<!-- 				<configuration>  -->
-<!-- 					<instructions>  -->
-<!-- 						<Bundle-SymbolicName>camel-cassandra</Bundle-SymbolicName>  -->
-<!-- 						<Import-Package>*</Import-Package>  -->
-<!-- 					</instructions>  -->
-<!-- 				</configuration>  -->
-<!-- 			</plugin>  -->
-        </plugins>
-    </build>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>${maven.bundle.plugin.version}</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-SymbolicName>camel-cassandra</Bundle-SymbolicName>
+						<Import-Package>*</Import-Package>
+					</instructions>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${maven.compiler.plugin.version}</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 </project>
