--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<camel.test.version>2.14.1</camel.test.version>
 		<camel.test.spring.version>2.14.1</camel.test.spring.version>
 		<slf4j.version>1.7.9</slf4j.version>
+		<commons-lang.version>2.6</commons-lang.version>
 		<cassandra.datastax.driver.core>2.1.1</cassandra.datastax.driver.core>
 		<io.teknek.farsandra.version>0.0.6</io.teknek.farsandra.version>
 		<maven.surefire.plugin.version>2.17</maven.surefire.plugin.version>
@@ -77,6 +78,12 @@
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test</artifactId>
 			<version>${camel.test.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons-lang.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
