--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
 	<packaging>bundle</packaging>
 	<name>Camel :: Cassandra</name>
 	<description>Camel Cassandra support</description>
-	<groupId>com.github.oscerd.camel.cassandra</groupId>
+	<groupId>com.github.oscerd</groupId>
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
-		<camel.osgi.export.pkg>com.github.oscerd.camel.component.cassandra.*</camel.osgi.export.pkg>
+		<camel.osgi.export.pkg>com.github.oscerd.component.cassandra.*</camel.osgi.export.pkg>
 		<camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=cassandra</camel.osgi.export.service>
 		<camel.core.version>2.14.1</camel.core.version>
 		<camel.test.version>2.14.1</camel.test.version>
