--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,6 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<properties>
-		<camel.osgi.export.pkg>com.github.oscerd.component.cassandra.*</camel.osgi.export.pkg>
-		<camel.osgi.export.service>org.apache.camel.spi.ComponentResolver;component=cassandra</camel.osgi.export.service>
 		<camel.core.version>2.14.1</camel.core.version>
 		<camel.test.version>2.14.1</camel.test.version>
 		<camel.test.spring.version>2.14.1</camel.test.spring.version>
@@ -35,6 +33,13 @@
 		<maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
 		<maven.release.plugin.version>2.5</maven.release.plugin.version>
 	</properties>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+		</license>
+	</licenses>
 
 	<scm>
 		<url>https://github.com/oscerd/camel-cassandra</url>
@@ -108,7 +113,7 @@
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
-					<skipTests>true</skipTests>
+					<skipTests>false</skipTests>
 				</configuration>
 			</plugin>
 			<plugin>
