Start porting features.xml in features folder

--- a/pom.xml
+++ b/pom.xml
@@ -218,7 +218,7 @@
 						<configuration>
 							<artifacts>
 								<artifact>
-									<file>target/classes/features.xml</file>
+									<file>target/features/features.xml</file>
 									<type>xml</type>
 									<classifier>features</classifier>
 								</artifact>
