--- a/pom.xml
+++ b/pom.xml
@@ -21,9 +21,7 @@
 	<url>https://github.com/oscerd/camel-cassandra</url>
 
 	<properties>
-		<camel.core.version>2.19.0</camel.core.version>
-		<camel.test.version>2.19.0</camel.test.version>
-		<camel.test.spring.version>2.19.0</camel.test.spring.version>
+		<camel.version>2.19.0</camel.version>
 		<slf4j.version>1.7.9</slf4j.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<cassandra.datastax.driver.core>3.2.0</cassandra.datastax.driver.core>
@@ -86,7 +84,7 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-core</artifactId>
-			<version>${camel.core.version}</version>
+			<version>${camel.version}</version>
 		</dependency>
 
 		<dependency>
@@ -109,7 +107,7 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test</artifactId>
-			<version>${camel.test.version}</version>
+			<version>${camel.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -121,7 +119,7 @@
 		<dependency>
 			<groupId>org.apache.camel</groupId>
 			<artifactId>camel-test-spring</artifactId>
-			<version>${camel.test.spring.version}</version>
+			<version>${camel.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
