--- a/pom.xml
+++ b/pom.xml
@@ -47,8 +47,8 @@
 
 	<scm>
 		<url>https://github.com/oscerd/camel-cassandra</url>
-		<connection>scm:git:https://github.com/oscerd/camel-cassandra.git</connection>
-		<developerConnection>scm:git:https://oscerd@github.com/oscerd/camel-cassandra.git</developerConnection>
+		<connection>scm:git:git@github.com:oscerd/camel-cassandra.git</connection>
+		<developerConnection>scm:git:git@github.com:oscerd/camel-cassandra.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 
