--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
 	<name>Camel :: Cassandra</name>
 	<description>Camel Cassandra Component</description>
 	<groupId>com.github.oscerd</groupId>
-	<version>2.24.1-SNAPSHOT</version>
+	<version>3.0.0-SNAPSHOT</version>
 	<url>https://github.com/oscerd/camel-cassandra</url>
 
 	<properties>
-		<camel.version>2.24.0</camel.version>
+		<camel.version>3.0.0-M2</camel.version>
 		<slf4j.version>1.7.9</slf4j.version>
 		<commons-lang.version>2.6</commons-lang.version>
 		<cassandra.datastax.driver.core>3.7.1</cassandra.datastax.driver.core>
@@ -83,7 +83,7 @@
 
 		<dependency>
 			<groupId>org.apache.camel</groupId>
-			<artifactId>camel-core</artifactId>
+			<artifactId>camel-support</artifactId>
 			<version>${camel.version}</version>
 		</dependency>
 
